2005-12-28  A Balamurugan  <bala@zresearch.com>

	* common/doc/argp-common.man: added new file.

	* bmc-info/doc/Makefile.am: updated.

2005-12-28  A Balamurugan  <bala@zresearch.com>

	* fish/bmc-info.8.in, fish/scripts/bmc-info/Makefile.am,
	fish/scripts/bmc-info/bmc-info.in: removed.

	* bmc-info/Makefile.am, bmc-info/doc/Makefile.am,
	bmc-info/doc/bmc-info.8.in, bmc-info/src/Makefile.am,
	bmc-info/src/bmc-info-argp.c, bmc-info/src/bmc-info-argp.h,
	bmc-info/src/bmc-info.c: now bmc-info is in C.

	* Makefile.am, configure.ac, fish/Makefile.am,
	fish/scripts/Makefile.am: updated.

2005-12-28  A Balamurugan  <bala@zresearch.com>

	* fish/extensions/bc-common.scm, fish/extensions/pef.scm,
	fish/extensions/sel.scm, fish/extensions/sensors-common.scm: fixed
	argument parsing bug.

	* libfreeipmi/src/ipmi-interface.c (ipmi_cmd): accepts lun, net_fn
	as arguments.

	* libfreeipmi/src/ipmi-chassis-cmds.c,
	libfreeipmi/src/ipmi-dev-global-cmds.c,
	libfreeipmi/src/ipmi-lan-cmds.c,
	libfreeipmi/src/ipmi-msg-support-cmds.c,
	libfreeipmi/src/ipmi-pef-cmds.c,
	libfreeipmi/src/ipmi-sdr-repo-cmds.c,
	libfreeipmi/src/ipmi-sel-cmds.c,
	libfreeipmi/src/ipmi-sensor-cmds.c,
	libfreeipmi/src/ipmi-serial-cmds.c,
	libfreeipmi/src/ipmi-sol-cmds.c: adopts changes in ipmi_cmd().

2005-12-27  A Balamurugan  <bala@zresearch.com>

	* fish/src/ipmi-wrapper.c (fi_ipmi_open): initialize dev before
	calling udm open functions.

	* ipmi-raw/src/ipmi-raw.c: like wise.

	* libfreeipmi/src/ipmi-kcs-interface.c (ipmi_kcs_io_init): like
	wise.

	* libfreeipmi/src/ipmi-interface.c
	(ipmi_open_outofband,ipmi_open_inband): no memset of dev
	arguments.

2005-12-27  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/freeipmi.h (ERR, ERR_OUT, ERR_EXIT): Revert
	changes from 2005-12-20.  Remembered why they were removed in the
	first place.

	* libfreeipmi/src/ipmi-debug.c (_set_prefix_str, _output_str,
	_output_byte_array): Make functions static.  Modified setup and
	output logic.
